[package]
name = "deta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.104"
serde = { version = "1.0.183", features = ["derive"] }
chrono = "0.4.19"
ureq = { version = "2.6.2", features = ["rustls", "json"] }
thiserror = "1.0.38"
