[package]
name = "deta-sdk"
version = "0.1.2"
edition = "2021"
authors = ["Sougata Jana"]
description = "A Rust client for Deta Base"
repository = "https://github.com/jnsougata/deta.rs"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.104"
serde = { version = "1.0.183", features = ["derive"] }
chrono = "0.4.19"
ureq = { version = "2.6.2", features = ["rustls", "json"] }
thiserror = "1.0.38"
