[package]
name = "detalib"
version = "0.1.5"
edition = "2021"
authors = ["Sougata Jana"]
description = "Rust bindings for the Deta Base and Drive HTTP API"
repository = "https://github.com/jnsougata/deta.rs"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
chrono = "0.4.19"
ureq = { version = "2.7.1", features = ["rustls", "json"] }
thiserror = "1.0.47"
